--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 // include ':sample', ':viewstate', ':mvp', ':rx', ':retrofit', ':sample-dagger1', ':sample-dagger2-rx', ':sample-mail',
 //     ':testing', ':mvp-common'
 
-include ':mvp-common', ':mvp', ':viewstate', ':testing', ':sample', ':sample-dagger1', ':sample-dagger2-rx', ':sample-mail', ':sample-kotlin'
+include ':mvp-common', ':mvp', ':viewstate', ':testing', ':sample', ':sample-dagger1', ':sample-dagger2-rx', ':sample-dagger2-rx-kotlin', ':sample-mail', ':sample-kotlin'
